<?xml version="1.0" encoding="UTF-8"?>
<resources>

	<string name="app_name">Bluetooth Pulse Oximeter v1.2</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to:</string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="button_connect">Connect</string>
    <string name="status_label">Status</string>
    <string name="status_off">run</string>
    <string name="status_on">pause</string>
    <string name="ch1_scale_default">20</string>
    <string name="ch2_scale_default">25</string>
    <string name="timebase_default">1s</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Oscilloscope.</string>
    <string name="pulse_rate">N.A</string>
    <string name="pulse_sat">N.A</string>
    <string name="host_ip">127.0.0.1</string>
    <string name="host_port">12345</string>
    <string name="settings">Settings</string>
    
    <!-- Options Menu -->
<!--    <string name="connect">Connect a device</string>-->
<!--    <string name="discoverable">Make discoverable</string>-->
<!--    <string name="graph">View Graph</string>-->
<!--    <string name="sendudp">Send to remote</string>-->
    <string name="test1">Testing 1</string>
    <string name="test2">Testing 2</string>
    <string name="test3">Testing 3</string>
</resources>