<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color" >

    <LinearLayout
        android:id="@+id/test_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@id/txt_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/label_color"
            android:textSize="@dimen/txt_med"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@id/Waveform"
        android:layout_width="@dimen/waveform_med_w"
        android:layout_height="@dimen/waveform_med_h"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@id/test_layout" >
        <!-- android:background="@drawable/waveform_border" > -->

        <org.projectproto.yuscope.WaveformView
            android:id="@id/WaveformArea"
            android:layout_width="@dimen/waveform_med_w"
            android:layout_height="@dimen/waveform_med_h"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/Waveform"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@id/hr_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:orientation="horizontal" >

            

                <TextView
                    android:id="@id/txt_hr_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="HR:"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/txt_med" />

                <TextView
                    android:id="@id/txt_hr_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pulse_rate"
                    android:textColor="@color/ch1_color"
                    android:textSize="@dimen/txt_med" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@id/spo_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:orientation="horizontal" >


                <TextView
                    android:id="@id/txt_spo_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="SPO2:"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/txt_med" />

                <TextView
                    android:id="@id/txt_spo_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pulse_sat"
                    android:textColor="@color/ch1_color"
                    android:textSize="@dimen/txt_med" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/udp_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:orientation="horizontal" >


                <TextView
                    android:id="@+id/txt_host_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Host:"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/txt_med" />

                <TextView
                    android:id="@+id/txt_host_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/host_ip"
                    android:textColor="@color/ch1_color"
                    android:textSize="@dimen/txt_med" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/udp_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:orientation="horizontal" >

            

                <TextView
                    android:id="@+id/txt_port_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Port:"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/txt_med" />

                <TextView
                    android:id="@+id/txt_port_value"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/host_port"
                    android:textColor="@color/ch1_color"
                    android:textSize="@dimen/txt_med" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/udp_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chkbox_enable_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable UDP stream."
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/txt_med" />
           
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Btn_Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connect_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/Waveform"
        android:layout_marginLeft="15.0px"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_r_activatecall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Receiver Start CALL"
            android:src="@drawable/btn_state_start_call" />

        <ImageButton
            android:id="@+id/btn_r_endcall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Receiver End CALL"
            android:src="@drawable/btn_state_end_call" />

        <ImageButton
            android:id="@+id/btn_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Send SMS"
            android:src="@drawable/sms" />

        <Button
            android:id="@+id/button_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_call"
            android:layout_toLeftOf="@id/txt_appname"
            android:text="Stream2Doc" />

        <Button
            android:id="@+id/button_udp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@id/Waveform"
            android:layout_alignTop="@+id/button_data"
            android:text="Test Msg" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/bluetooth_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15.0px"
        android:orientation="vertical" >

        <TextView
            android:id="@id/txt_btstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BT status:"
            android:textColor="@color/status_color" />

        <Button
            android:id="@id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="70.0px"
            android:text="@string/button_connect" />
    </LinearLayout>

</RelativeLayout>